--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
 
 </head>
 <body>
-    <h1>hola</h1>
-    <h1>hola2</h1>
+    
+    
+    <div class="squred">
+        <div class="top">
+                <h1>victor g</h1>
+                <h2>software developer</h2>
+
+    </div>
+
+
+
+    </div>
+    <div>
+        <div class="bottom">
+            <p class="quote"> "se lo que quieres ser"</p>
+            <p class="author">la barbie girl</p>
+
+        </div>
+    </div>
+
+
 </body>
 </html>
