--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 </head>
 <body>
+
+    <video id="videowrapper" autoplay loop muted>
+        <source src="./bird_video.mp4" type="video/mp4">
+    </video>
     
     
     <div class="squred">
